fixing hw builder exercise alignment

--- a/resources/styles/components/task-plan/homework/exercises.less
+++ b/resources/styles/components/task-plan/homework/exercises.less
@@ -100,6 +100,7 @@ label.exercises-section-label {
 
 .card-list.exercises {
   .exercise.card {
+    text-align: left;
     .panel-body { padding: 20px 100px; }
   }
 
